added a class to the Github link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
     </div>
     </div>
-      <p><a href="https://github.com/korobochko-coder/weather-app">Open-source code</a> by Anna Nadtochyi</p>
+      <p class="creator"><a href="https://github.com/korobochko-coder/weather-app">Open-source code</a> by Anna Nadtochyi</p>
     <script src="src/script.js"></script>
   </body>
 </html>
